concord_macros/tests/trybuild/fail/codegen/buffered_endpoint_execute_websocket.stderr
error[E0599]: the method `execute_websocket` exists for struct `PendingRequest<'_, BufferedEndpointExecuteWebSocketApiCx, EpUserHa48f81f001b893d2, ReqwestTransport>`, but its trait bounds were not satisfied
  --> tests/trybuild/fail/codegen/buffered_endpoint_execute_websocket.rs:21:24
   |
10 | / api! {
11 | |     client BufferedEndpointExecuteWebSocketApi {
12 | |         base "https://example.com"
...  |
15 | |     GET User
   | |____________- doesn't satisfy `_: WebSocketEndpoint<BufferedEndpointExecuteWebSocketApiCx>`
...
21 |       let _ = api.user().execute_websocket().await.unwrap();
   |                          ^^^^^^^^^^^^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `EpUserHa48f81f001b893d2: WebSocketEndpoint<BufferedEndpointExecuteWebSocketApiCx>`
note: the trait `WebSocketEndpoint` must be implemented
  --> $WORKSPACE/concord_core/src/endpoint.rs
   |
   | pub trait WebSocketEndpoint<Cx: ClientContext>: Endpoint<Cx> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
